--- a/src/component/main-layout/main-layout.scss
+++ b/src/component/main-layout/main-layout.scss
@@ -1,46 +1,50 @@
 :root {
-  --primary-color: #ddd;
-  --secondary-color: #ddd;
-  --background-color: #ddd;
-  --text-color: #ddd;
-  --header-color: #ddd;
-  --footer-color: #ddd;
+    --primary-color: #ddd;
+    --secondary-color: #ddd;
+    --background-color: #ddd;
+    --text-color: #ddd;
+    --header-color: #ddd;
+    --footer-color: #ddd;
 }
 
 [data-theme="dark"] {
-  --primary-color: #ddd;
-  --secondary-color: #ddd;
-  --background-color: #ddd;
-  --text-color: #ddd;
-  --header-color: #ddd;
-  --footer-color: #ddd;
+    --primary-color: #ddd;
+    --secondary-color: #ddd;
+    --background-color: #ddd;
+    --text-color: #ddd;
+    --header-color: #ddd;
+    --footer-color: #ddd;
 }
 
 img {
-  object-fit: contain;
-  width: 100%;
-  height: 100%;
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
 }
 
 .flex-layout {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.bold-font {
+    font-weight: 800;
 }
 
 #main-layout {
-  background-color: var(--background-color);
-  max-width: 100vw;
-  min-height: 100vh;
-  overflow-x: hidden;
+    background-color: var(--background-color);
+    max-width: 100vw;
+    min-height: 100vh;
+    overflow-x: hidden;
 
-  .neon-hr {
-    background: var(--primary-color);
-    border: 1px solid var(--primary-color);
-    box-shadow: 0 0 15px var(--secondary-color);
-    -webkit-filter: brightness(1.8);
-    filter: brightness(1.8);
-    height: 5px;
-    width: 100%;
-  }
+    .neon-hr {
+        background: var(--primary-color);
+        border: 1px solid var(--primary-color);
+        box-shadow: 0 0 15px var(--secondary-color);
+        -webkit-filter: brightness(1.8);
+        filter: brightness(1.8);
+        height: 5px;
+        width: 100%;
+    }
 }
