--- a/src/page/home-page/home-page.scss
+++ b/src/page/home-page/home-page.scss
@@ -1,2 +1,147 @@
+@import "../../component/main-layout/main-layout.scss";
+
 #home-page {
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
+
+    .marquee {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        padding: 5px 0;
+        color: #fff;
+        font-weight: 600;
+    }
+
+    .about-us {
+        margin-top: 20px;
+
+        .title {
+            margin-bottom: 5px;
+            color: var(--primary-color);
+            font-size: 18px;
+            font-weight: 800;
+        }
+
+        .desc {
+            color: var(--color);
+            font-size: 15px;
+            font-weight: 700;
+            line-height: 1.3;
+        }
+    }
+
+    .sponsored {
+        margin-top: 25px;
+
+        .title {
+            margin-bottom: 10px;
+            color: var(--primary-color);
+            font-size: 16px;
+            font-weight: 800;
+        }
+
+        .sponsored-item img {
+            width: 100%;
+            filter: grayscale(1);
+            transition: all 0.5s ease;
+
+            :is(&:hover, &:active) {
+                filter: grayscale(0);
+            }
+        }
+    }
+
+    .useful-information {
+        margin-top: 25px;
+        height: 100%;
+
+        .title {
+            margin-bottom: 10px;
+            color: var(--primary-color);
+            font-size: 16px;
+            font-weight: 800;
+        }
+
+        .info-item {
+            .title {
+                display: flex;
+                align-items: center;
+                gap: 5px;
+                color: var(--secondary-color);
+                font-size: 15px;
+                font-weight: 800;
+            }
+
+            .content {
+                color: rgba(255, 255, 255, 0.8);
+                font-size: 14px;
+                font-weight: 600;
+                line-height: 1.3;
+            }
+        }
+    }
+
+    .game-category {
+        margin-top: 25px;
+        .title {
+            margin-bottom: 10px;
+            color: var(--primary-color);
+            font-size: 16px;
+            font-weight: 800;
+        }
+
+        .game-category-item img {
+            object-fit: contain;
+            width: 100%;
+        }
+    }
+
+    .video-poster {
+        margin-top: 20px;
+
+        .latest-video {
+            max-height: 565px;
+            overflow: hidden;
+            .title {
+                display: flex;
+                align-items: center;
+                gap: 10px;
+                margin-bottom: 10px;
+                color: var(--primary-color);
+                font-size: 16px;
+                font-weight: 600;
+            }
+
+            video {
+                width: 100%;
+                height: 100%;
+                border-radius: 4px;
+            }
+        }
+
+        .recomanded-poster {
+            width: 100%;
+            max-height: 565px;
+            overflow: hidden;
+
+            .title {
+                display: flex;
+                align-items: center;
+                gap: 5px;
+                margin-bottom: 10px;
+                color: var(--primary-color);
+                font-size: 16px;
+                font-weight: 600;
+            }
+
+            .poster-img img {
+                aspect-ratio: 1/1.14;
+                width: 100%;
+                border-radius: 4px;
+            }
+        }
+    }
 }
