--- a/src/page/profile/component/change-password/change-password.scss
+++ b/src/page/profile/component/change-password/change-password.scss
@@ -1,2 +1,39 @@
 .change-password-wrapper {
+    .ant-card {
+        background-color: #141414;
+        border: none;
+
+        .ant-form label {
+            color: rgba(255, 255, 255, 0.8);
+        }
+
+        .ant-form input {
+            background-color: rgba(255, 255, 255, 0.9);
+
+            &:disabled {
+                color: #fff;
+                background-color: rgba(255, 255, 255, 0.1);
+            }
+        }
+
+        hr {
+            margin: 20px 0;
+            border: 1px solid var(--primary-color);
+        }
+
+        .banner-img {
+            border-radius: 6px;
+            overflow: hidden;
+
+            img {
+                width: 100%;
+                max-height: 500px;
+            }
+        }
+
+        .description {
+            color: rgba(255, 255, 255, 0.8);
+            font-weight: 700;
+        }
+    }
 }
