--- a/src/page/profile/component/withdraw/withdraw.scss
+++ b/src/page/profile/component/withdraw/withdraw.scss
@@ -1,2 +1,130 @@
-.withdraw-wrapper {
-}
+.header {
+    margin-bottom: 10px;
+    color: var(--primary-color);
+    font-size: 18px;
+    font-weight: 700;
+  }
+  
+  .withdraw-wrapper {
+    padding: 15px;
+    background-color: #141414;
+    border-radius: 8px;
+  
+    &.no-bank {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: var(--secondary-color);
+      font-size: 16px;
+      font-weight: 800;
+    }
+  
+    .player-bank {
+      margin-top: 10px;
+  
+      .player-bank-title {
+        color: var(--color);
+        font-size: 14px;
+        font-weight: 600;
+  
+        &:before {
+          content: "*";
+          margin-inline-end: 4px;
+          color: #ff4d4f;
+        }
+      }
+  
+      .player-bank-item {
+        margin-top: 15px;
+  
+        .item {
+          width: 100%;
+          border-radius: 8px;
+          overflow: hidden;
+          cursor: pointer;
+          filter: brightness(0.6);
+          transition: 0.5s;
+  
+          img {
+            width: 100%;
+          }
+  
+          :is(&:hover, &:active, &.true) {
+            filter: brightness(1);
+          }
+        }
+      }
+    }
+  
+    .ant-form {
+      margin-top: 10px;
+  
+      label {
+        color: var(--color);
+        font-size: 14px;
+        font-weight: 600;
+      }
+    }
+  
+    .ant-form input {
+      background-color: rgba(255, 255, 255, 0.9);
+  
+      &:disabled {
+        color: #fff;
+        background-color: rgba(255, 255, 255, 0.1);
+      }
+    }
+  }
+  
+  .add-bank {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+    padding: 15px;
+    background-color: #141414;
+    border-radius: 8px;
+  
+    .title {
+      color: var(--secondary-color);
+      font-size: 16px;
+      font-weight: 800;
+    }
+  
+    .btn-add-bank {
+      display: inline-block;
+      padding: 10px 20px;
+      color: var(--color);
+      background-color: var(--primary-color);
+      border: 1px solid var(--primary-color);
+      border-radius: 8px;
+      cursor: pointer;
+      transition: 0.5s;
+  
+      &:hover {
+        color: #000;
+        background-color: var(--secondary-color);
+        border-color: var(--secondary-color);
+      }
+    }
+  }
+  
+  .add-bank-form {
+    padding: 15px;
+    background-color: rgba(188, 188, 188, 0.2);
+    border-radius: 8px;
+  
+    .title {
+      margin-bottom: 20px;
+      color: var(--secondary-color);
+      font-size: 14px;
+      font-weight: 700;
+    }
+  
+    .ant-form label {
+      color: var(--color);
+      font-size: 12px;
+      font-weight: 600;
+    }
+  }
