--- a/src/component/main-layout/navbar/component/user-dropdown/user-dropdown.scss
+++ b/src/component/main-layout/navbar/component/user-dropdown/user-dropdown.scss
@@ -8,8 +8,8 @@
         align-items: center;
         gap: 10px;
         padding: 5px 10px;
-        color: #ddd;
-        // color: var(--text-color);
+        // color: #ddd;
+        color: var(--text-color);
         border-radius: 8px;
         cursor: pointer;
         transition: 0.5s;
