--- a/src/component/main-layout/main-layout.scss
+++ b/src/component/main-layout/main-layout.scss
@@ -47,4 +47,62 @@ img {
         height: 5px;
         width: 100%;
     }
+
+    .contact-us-float {
+        position: fixed;
+        top: 30vh;
+        left: -160px;
+        display: flex;
+        width: 200px;
+        height: 200px;
+        background-color: #152951;
+        border-radius: 0 12px 12px 0;
+        transition: 0.5s;
+        scroll-snap-align: center;
+        cursor: pointer;
+        z-index: 1000;
+
+        &:hover,
+        &:active {
+            left: 0;
+        }
+
+        .content {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap: 10px;
+            text-align: left;
+            width: 160px;
+            color: rgba(255, 255, 255, 0.5);
+            font-weight: 700;
+
+            .items {
+                transition: 0.5s;
+
+                :is(&:hover, &:active) {
+                    color: var(--secondary-color);
+                }
+            }
+        }
+
+        .title {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 5px;
+            padding: 10px;
+            width: 40px;
+            height: 200px;
+            color: #fff;
+            background-color: #101f3d;
+            font-size: 16px;
+            font-weight: 700;
+            letter-spacing: 2px;
+            writing-mode: vertical-rl;
+            border-radius: 0 12px 12px 0;
+            opacity: 0.8;
+        }
+    }
 }
