--- a/src/page/profile/component/deposit/deposit.scss
+++ b/src/page/profile/component/deposit/deposit.scss
@@ -4,7 +4,7 @@
     border-radius: 8px;
 
     .deposit-type-title {
-        color: var(--color);
+        color: var(--text-color);
         font-size: 14px;
         font-weight: 600;
 
@@ -27,7 +27,7 @@
             align-items: center;
             gap: 5px;
             padding: 10px 15px;
-            color: var(--color);
+            color: var(--text-color);
             border: 1px solid var(--primary-color);
             border-radius: 6px;
             cursor: pointer;
@@ -45,7 +45,7 @@
             filter: grayscale(1);
 
             :is(&:hover, &:active, &.true) {
-                color: var(--color);
+                color: var(--text-color);
                 background-color: transparent;
                 border-color: var(--primary-color);
             }
@@ -56,7 +56,7 @@
         margin-top: 10px;
 
         .telco-provider-title {
-            color: var(--color);
+            color: var(--text-color);
             font-size: 14px;
             font-weight: 600;
 
@@ -93,7 +93,7 @@
         margin-top: 10px;
 
         .cdm-title {
-            color: var(--color);
+            color: var(--text-color);
             font-size: 14px;
             font-weight: 600;
 
@@ -130,7 +130,7 @@
         margin-top: 10px;
 
         label {
-            color: var(--color);
+            color: var(--text-color);
             font-size: 14px;
             font-weight: 600;
         }
