--- a/src/page/home-page/home-page.scss
+++ b/src/page/home-page/home-page.scss
@@ -43,15 +43,32 @@
             font-weight: 800;
         }
 
-        .sponsored-item img {
-            width: 100%;
-            filter: grayscale(1);
-            transition: all 0.5s ease;
+        ::-webkit-scrollbar {
+            display: none;
+        }
 
-            :is(&:hover, &:active) {
-                filter: grayscale(0);
+        .sponsored-content {
+            display: flex;
+            overflow-x: auto;
+            overflow-y: hidden;
+            gap: 16px;
+
+            .sponsored-item img {
+                object-fit: contain;
+                width: 100%;
+                min-width: 150px;
             }
         }
+
+        // .sponsored-item img {
+        //     width: 100%;
+        //     filter: grayscale(1);
+        //     transition: all 0.5s ease;
+
+        //     :is(&:hover, &:active) {
+        //         filter: grayscale(0);
+        //     }
+        // }
     }
 
     .useful-information {
