--- a/src/page/home-page/home-page.scss
+++ b/src/page/home-page/home-page.scss
@@ -47,28 +47,17 @@
             display: none;
         }
 
-        .sponsored-content {
-            display: flex;
-            overflow-x: auto;
-            overflow-y: hidden;
-            gap: 16px;
+        .sponsored-item img {
+            width: 100%;
+            min-width: 100px;
+            max-width: 100px;
+            filter: grayscale(1);
+            transition: all 0.5s ease;
 
-            .sponsored-item img {
-                object-fit: contain;
-                width: 100%;
-                min-width: 150px;
+            :is(&:hover, &:active) {
+                filter: grayscale(0);
             }
         }
-
-        // .sponsored-item img {
-        //     width: 100%;
-        //     filter: grayscale(1);
-        //     transition: all 0.5s ease;
-
-        //     :is(&:hover, &:active) {
-        //         filter: grayscale(0);
-        //     }
-        // }
     }
 
     .useful-information {
