--- a/src/page/game-transfer/game-transfer.scss
+++ b/src/page/game-transfer/game-transfer.scss
@@ -34,6 +34,10 @@
                 border: 1px solid var(--primary-color);
                 filter: brightness(1);
             }
+
+            .text-behind {
+                margin-left: 5px;
+            }
         }
     }
 
