--- a/src/page/home-page/home-page.scss
+++ b/src/page/home-page/home-page.scss
@@ -26,7 +26,7 @@
         }
 
         .desc {
-            color: var(--color);
+            color: rgba(255, 255, 255, 0.8);
             font-size: 15px;
             font-weight: 700;
             line-height: 1.3;
