--- a/src/page/home-page/home-page.scss
+++ b/src/page/home-page/home-page.scss
@@ -167,4 +167,49 @@
             }
         }
     }
+
+    .lb-main-container {
+        width: 100%;
+        height: 70%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-image: url('https://miniworldcup1.sgp1.digitaloceanspaces.com/BWG/background/background.png');
+        background-size: cover; /* Ensures the background image covers the entire container */
+        background-repeat: no-repeat; /* Prevents the background image from repeating */
+        background-position: center; /* Centers the background image */
+
+        .lb-game-cat-container {
+            width: 15%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .lb-sub-container {
+            width: 75%;
+            height: 100%;
+            display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+
+            .lb-announcement-container {
+                width: 100%;
+                height: 15%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+            .lb-game-container {
+                width: 100%;
+                height: 85%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+        }
+    }
 }
