--- a/src/page/login/component/success-modal/success-modal.scss
+++ b/src/page/login/component/success-modal/success-modal.scss
@@ -2,7 +2,7 @@
     .ant-modal-content {
         padding: 0;
         background-color: #222;
-        border: 3px solid var(--primary-color);
+        border: 2px solid #c81d1d;
         border-radius: 8px;
         overflow: hidden;
 
@@ -11,11 +11,12 @@
             justify-content: center;
             align-items: center;
             padding: 10px;
-            background-color: var(--secondary-color);
+            background: radial-gradient(#5f0000, #300000);
             border-radius: 0;
-            border-bottom: 3px solid var(--primary-color);
+            border-bottom: 3px solid #c81d1d;
 
             .ant-modal-title {
+                color: rgba(255, 255, 255, 0.8);
                 font-weight: 800;
             }
         }
@@ -30,7 +31,7 @@
             font-size: 16px;
             font-weight: 700;
 
-            .btn-close {
+            .btn-close-red {
                 display: flex;
                 justify-content: center;
                 margin-top: 10px;
@@ -40,8 +41,8 @@
                     justify-content: center;
                     align-items: center;
                     padding: 5px 20px;
-                    color: rgba(255, 255, 255, 0.8);
-                    background-color: var(--primary-color);
+                    color: #000;
+                    background-color: #e00000;
                     border: none;
                     border-radius: 8px;
                     font-size: 16px;
@@ -50,8 +51,8 @@
                     transition: 0.5s;
 
                     &:hover {
-                        color: #000;
-                        background-color: var(--secondary-color);
+                        color: rgba(255, 255, 255, 0.8);
+                        background-color: #4c0000;
                     }
                 }
             }
