--- a/src/component/main-layout/main-layout.scss
+++ b/src/component/main-layout/main-layout.scss
@@ -51,6 +51,10 @@ img {
     max-width: 100vw;
     min-height: 100vh;
     overflow-x: hidden;
+    background-image: url('https://miniworldcup1.sgp1.digitaloceanspaces.com/BWG/background/background.png');
+    background-size: cover; /* Ensures the background image covers the entire container */
+    background-repeat: no-repeat; /* Prevents the background image from repeating */
+    background-position: center; /* Centers the background image */
 
     .neon-hr {
         background: var(--primary-color);
