--- a/src/page/home-page/home-page.scss
+++ b/src/page/home-page/home-page.scss
@@ -167,6 +167,86 @@
             }
         }
     }
+}
+
+.v-lobby-container {
+    width: 100%;
+    height: 100%;
+    max-height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    gap: 5px;
+    overflow: hidden;
+
+    ::-webkit-scrollbar {
+        display: none;
+    }
+
+    .lb-header-container {
+        width: 100%;
+        height: 15%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .lb-footer-container {
+        width: 100%;
+        height: 15%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .lb-announcement-container {
+        width: 100%;
+        height: 5%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .lb-game-cat-container {
+        width: 100%;
+        height: 15%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .lb-game-container {
+        width: 100%;
+        height: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+.h-lobby-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    overflow: hidden;
+
+    ::-webkit-scrollbar {
+        display: none;
+    }
+
+    .lb-header-container {
+        width: 100%;
+        height: 10%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 
     .lb-main-container {
         width: 100%;
@@ -174,10 +254,6 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background-image: url('https://miniworldcup1.sgp1.digitaloceanspaces.com/BWG/background/background.png');
-        background-size: cover; /* Ensures the background image covers the entire container */
-        background-repeat: no-repeat; /* Prevents the background image from repeating */
-        background-position: center; /* Centers the background image */
 
         .lb-game-cat-container {
             width: 15%;
@@ -192,9 +268,9 @@
             width: 75%;
             height: 100%;
             display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
 
             .lb-announcement-container {
                 width: 100%;
@@ -212,4 +288,12 @@
             }
         }
     }
+    .lb-footer-container {
+        width: 100%;
+        height: 20%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
+
