--- a/src/page/home-page/component/gameList/game-list.scss
+++ b/src/page/home-page/component/gameList/game-list.scss
@@ -38,6 +38,7 @@
     justify-content: start;
     align-items: center;
     gap: 10px;
+    margin-top: 6%;
 
     .game-wrapper {
         width: 100%;
