--- a/src/component/main-layout/main-layout.scss
+++ b/src/component/main-layout/main-layout.scss
@@ -49,9 +49,10 @@ img {
 #main-layout {
     background-color: var(--background-color);
     max-width: 100vw;
-    min-height: 100vh;
+    min-height: 95vh;
     overflow-x: hidden;
-    background-image: url('https://miniworldcup1.sgp1.digitaloceanspaces.com/BWG/background/background.png');
+    //background-image: url('https://miniworldcup1.sgp1.digitaloceanspaces.com/BWG/background/background.png');
+    background-image: url('https://game-platform.sgp1.digitaloceanspaces.com/GALAXY0001/background/jackpot-background.png');
     background-size: cover; /* Ensures the background image covers the entire container */
     background-repeat: no-repeat; /* Prevents the background image from repeating */
     background-position: center; /* Centers the background image */
