--- a/src/page/home-page/component/jackpot/jackpot.scss
+++ b/src/page/home-page/component/jackpot/jackpot.scss
@@ -1,4 +1,4 @@
-.footer-container {
+.jackpot-container {
     width: 50%;
     height: 50%;
     display: flex;
@@ -26,7 +26,7 @@
         position: relative;
 
         .ft-jackpot-img {
-            height: 100%;
+            height: 150%;
             aspect-ratio: 2.5/1;
         }
 
