--- a/src/page/home-page/home-page.scss
+++ b/src/page/home-page/home-page.scss
@@ -192,12 +192,13 @@
         align-items: center;
     }
 
-    .lb-footer-container {
+    .lb-jackpot-container {
         width: 100%;
         height: 15%;
         display: flex;
         justify-content: center;
         align-items: center;
+        margin-top: 1%;
     }
 
     .lb-announcement-container {
@@ -253,7 +254,7 @@
         height: 70%;
         display: flex;
         justify-content: center;
-        align-items: center;
+        //align-items: center;
 
         .lb-game-cat-container {
             width: 15%;
@@ -288,7 +289,7 @@
             }
         }
     }
-    .lb-footer-container {
+    .lb-jackpot-container {
         width: 100%;
         height: 20%;
         display: flex;
