--- a/src/page/login/login.scss
+++ b/src/page/login/login.scss
@@ -88,6 +88,7 @@
               background: linear-gradient(to bottom, #e00000, #4c0000);
               color: white;
               font-family: "KrossNeueGrotesk-Heavy";
+              transition: 0.5s;
             }
           }
         }
