--- a/src/page/play-game/play-game.scss
+++ b/src/page/play-game/play-game.scss
@@ -1,39 +1,32 @@
-.game-menu {
-    padding: 20px 0;
+.gp-transfer-balance {
+    padding: 20px;
 
     .game-provider-menu {
         margin-bottom: 20px;
-        padding: 10px;
+        // padding: 10px;
         background-color: rgba(0, 0, 0, 0.5);
         border-radius: 8px;
+        padding: 20px 0;
 
         .item {
             display: flex;
             justify-content: center;
             align-items: center;
             gap: 5px;
-            //padding: 3px 15px;
+            padding: 3px 15px;
             height: 100%;
             color: rgba(255, 255, 255, 0.8);
             background-color: rgba(0, 0, 0, 0.7);
             border: 1px solid transparent;
-            //border-radius: 10px; //50px
+            border-radius: 50px;
             font-size: 12px;
             font-weight: 700;
             cursor: pointer;
             filter: brightness(0.8);
             transition: 0.5s;
 
-            game-img {
-                width: 100%;
-            }
-
-            game-provider-img {
+            img {
                 width: 30px;
-            }
-
-            .text-behind {
-                margin-left: 5px;
             }
 
             :is(&:hover, &.true) {
@@ -41,10 +34,33 @@
                 border: 1px solid var(--primary-color);
                 filter: brightness(1);
             }
+
+            .text-behind {
+                margin-left: 5px;
+            }
         }
     }
-    // .banner-img img {
-    //   width: 100%;
-    //   max-height: 500px;
-    // }
+
+    .gp-btn img {
+        margin-bottom: 15px;
+        width: 100%;
+    }
+
+    .ant-form label {
+        color: rgba(255, 255, 255, 0.8);
+        font-weight: 700;
+    }
+
+    .ant-form input[type="number"] {
+        background-color: rgba(255, 255, 255, 0.9);
+
+        &:disabled {
+            color: #fff;
+            background-color: rgba(255, 255, 255, 0.1);
+        }
+    }
+
+    .ant-btn-dangerous {
+        font-weight: 700;
+    }
 }
