--- a/src/component/main-layout/component/jackpot/jackpot.scss
+++ b/src/component/main-layout/component/jackpot/jackpot.scss
@@ -1,12 +1,9 @@
-.hp-jackpot-container {
-    width: 40%;
+.ml-jackpot-container {
+    //width: 100%;
     height: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top:2%;
-    margin-bottom:2%;
-    margin-right:20%;
 
     .ft-suggestion-container {
         height: 90%;
@@ -24,13 +21,15 @@
     }
     .ft-jackpot-container {
         height: 90%;
-        aspect-ratio: 2.5/1;
+        width: 65%;
+        //aspect-ratio: 2.5/1;
         cursor: pointer;
         position: relative;
+        margin-bottom: 5%;
 
         .ft-jackpot-img {
-            //height: 150%;
-            aspect-ratio: 2.5/1;
+            height: 60%;
+            //aspect-ratio: 2/1;
         }
 
         .ft-jackpot-text {
