--- a/src/page/home-page/component/gameCat/game-cat.scss
+++ b/src/page/home-page/component/gameCat/game-cat.scss
@@ -14,7 +14,7 @@
     .cat {
         height: 100%;
         aspect-ratio: 1/1;
-        padding: 10px;
+        padding: 5px;
         cursor: pointer;
 
         .cat-img {
@@ -38,6 +38,7 @@
     align-items: center;
     overflow-x: hidden;
     overflow-y: auto;
+    margin-top: 18%;
 
     .cat-title {
         width: 100%;
@@ -56,7 +57,7 @@
     .cat {
         width: 80%;
         aspect-ratio: 1/1;
-        padding: 10px;
+        //padding: 10px;
         cursor: pointer;
 
         .cat-img {
