--- a/src/page/profile/component/top-up-balance/topupbalance.scss
+++ b/src/page/profile/component/top-up-balance/topupbalance.scss
@@ -130,7 +130,7 @@
         margin-top: 10px;
 
         label {
-            color: var(--text-color);
+            color: rgba(255, 255, 255, 0.9);
             font-size: 14px;
             font-weight: 600;
         }
