--- a/src/page/suggestion/suggestion.scss
+++ b/src/page/suggestion/suggestion.scss
@@ -25,7 +25,7 @@
           justify-content: center;
           align-items: center;
           padding: 5px 0;
-          color: var(--color);
+          color: white;
           border: 2px solid var(--primary-color);
           border-radius: 6px;
           font-size: 16px;
