--- a/src/component/main-layout/component/navbar/navbar.scss
+++ b/src/component/main-layout/component/navbar/navbar.scss
@@ -114,6 +114,18 @@
             aspect-ratio: 5/1;
             position: relative;
 
+            .deposit-btn-img {
+                margin-left: 10%;
+                width: 70%;
+                height: 100%;
+            }
+            
+            .deposit-arrow-img {
+                margin-left: 7%;
+                width: 7.5%;
+                height: 100%;
+            }
+
             .player-btn-img {
                 height: 100%;
                 aspect-ratio: 4/1;
